--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,17 @@ html,
 body {
 	overflow-x: hidden;
 }
+
+/* Swiper pagination bullet style */
+.custom-pagination .swiper-pagination-bullet {
+	background-color: white; /* Default inactive color */
+	width: 12px;
+	height: 12px;
+	margin: 0 5px;
+	border-radius: 50%;
+	opacity: 1;
+}
+
+.custom-pagination .swiper-pagination-bullet-active {
+	background-color: red; /* Active color */
+}
